fix: nav visible and modal scroll

--- a/app/javascript/frontend/partials/Navigation/index.scss
+++ b/app/javascript/frontend/partials/Navigation/index.scss
@@ -264,7 +264,7 @@ nav {
       }
 
       .quick-search-bar {
-        left: 250px;
+        left: 322px;
         right: -285px;
       }
     }
